bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Compilation error:
MonkeyTrouble:4: error: not found: value |
  if (aSmile & bSmile) | !(aSmile & bSmile) {
                       ^MonkeyTrouble:4: error: Boolean does not take parameters
  if (aSmile & bSmile) | !(aSmile & bSmile) {
                                            ^